project("filterscripts")
add_library(filterscripts MODULE "main.cpp"  "ReadCFG.cpp" "filterscripts.cpp" "hook.cpp")
set_target_properties(filterscripts PROPERTIES PREFIX "")
set(CMAKE_BUILD_TYPE Release)
if(FORCE_32)
	set_target_properties(filterscripts PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
	set_target_properties(filterscripts PROPERTIES OUTPUT_NAME "filterscripts04rel32")
elseif(NOT WIN32 OR CMAKE_SIZEOF_VOID_P EQUAL 8)
	set_target_properties(filterscripts PROPERTIES OUTPUT_NAME "filterscripts04rel64")
else()
	set_target_properties(filterscripts PROPERTIES OUTPUT_NAME "filterscripts04rel32")
endif()
